[metadata]
name = diamond
version = 1.0
description = Fluidity preprocessor
author = The ICOM team
author_email = patrick.farrell06@imperial.ac.uk
url = https://www.imperial.ac.uk/earth-science/research/research-groups/amcg/

[options]
include_package_data = True
packages = diamond
scripts = bin/diamond

[options.package_data]
gui = gui.ui, diamond.svg
plugins/* = *.py
